# swagger-doc.json
@@ -1917,6 +1917,9 @@
           "discountAmount": {
             "type": "number",
             "format": "double"
+          },
+          "note": {
+            "type": "string"
           }
         }
       },
@@ -2253,6 +2256,9 @@
           "discountAmount": {
             "type": "number",
             "format": "double"
+          },
+          "note": {
+            "type": "string"
           }
         }
       },
@@ -2305,6 +2311,9 @@
           "discountAmDouble": {
             "type": "number",
             "format": "double"
+          },
+          "note": {
+            "type": "string"
           }
         }
       },
